--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
       </div>
       <div class="favorite-card">
         <p>Video 2</p>
-        <video controls src="video2.mp4"></video>
+        <video controls src="5ed327d18077b0bbaf80ba7acdbbb2e0.mp4"></video>
       </div>
       <div class="favorite-card">
         <p>Video 3</p>
-        <video controls src="video3.mp4"></video>
+        <video controls src="b56ecd095ec0c1bd4ea916430c67a721.mp4"></video>
       </div>
       <div class="favorite-card">
         <p>Video 4</p>
