--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>?ChatAI</title>
-
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="style.css" />
   <style>
     * {margin: 0; padding: 0; box-sizing: border-box;}
     body, html {height: 100%; font-family: Arial, sans-serif; color: white;}
-    
+
     /* Background */
     body {
       background: url("https://images.unsplash.com/photo-1503264116251-35a269479413?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80") no-repeat center center fixed;
@@ -40,7 +31,7 @@
       align-items: center;
       background: rgba(0,0,0,0.7);
       color: white;
-      padding: 15px 50px;
+      padding: 15px 20px;
       position: sticky;
       top: 0;
       z-index: 100;
@@ -51,10 +42,27 @@
     nav ul li a {text-decoration: none; color: white; font-weight: bold; transition: 0.3s;}
     nav ul li a:hover {color: #f39c12;}
 
+    /* Navbar Responsive */
+    .menu-toggle {background: none; border: none; color: white; font-size: 28px;}
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        background: rgba(0, 0, 0, 0.9);
+        position: absolute;
+        top: 70px;
+        right: 10px;
+        padding: 15px;
+        border-radius: 10px;
+        display: none;
+      }
+      nav ul.show {display: flex;}
+      nav ul li {margin: 10px 0;}
+    }
+
     /* Sections */
     section {min-height: 100vh; padding: 50px 20px; text-align: center; background: rgba(0,0,0,0.5); margin-bottom: 20px; border-radius: 10px;}
     h2 {margin-bottom: 20px;}
-    
+
     /* Hero */
     .hero {display: flex; justify-content: space-between; align-items: center; max-width: 1000px; width: 90%; margin: auto; gap: 40px; padding: 50px 0;}
     .hero-text {flex:1; text-align:left;}
@@ -64,43 +72,47 @@
     .hero-text p{color:#ddd; line-height:1.6;}
     .hero-img {flex:1; display:flex; justify-content:center;}
     .hero-img img {width:320px; border-radius:10px; border:5px solid white; cursor:pointer;}
-    @media (max-width:768px) { .hero{flex-direction:column; text-align:center;} .hero-img img{margin-top:20px;width:250px;} }
+    @media (max-width:768px) {
+      .hero{flex-direction:column; text-align:center;}
+      .hero-img img{margin-top:20px;width:250px;}
+      .hero-text h1 {font-size:28px;}
+      .hero-text h2 {font-size:20px;}
+    }
 
     /* Gallery */
-    .gallery {display:grid; grid-template-columns:repeat(2, 250px); gap:20px; justify-content:center; margin-top:20px;}
+    .gallery {display:grid; grid-template-columns:repeat(auto-fit, minmax(160px, 1fr)); gap:15px; justify-content:center; margin-top:20px;}
     .gallery img {width:100%; border-radius:10px; cursor:pointer; transition:transform 0.3s;}
     .gallery img:hover {transform:scale(1.05);}
     .gallery p{margin-top:10px; font-weight:bold; color:white;}
 
     /* Favorites */
-    .favorites-grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(280px,1fr)); gap:25px; justify-content:center; align-items:stretch;}
+    .favorites-grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:25px; justify-content:center; align-items:stretch;}
     .favorite-card {background:#1c1c1c; padding:20px; border-radius:16px; display:flex; flex-direction:column; align-items:center; gap:15px; transition:transform 0.3s, background 0.3s;}
     .favorite-card:hover {transform:translateY(-5px); background:#2a2a2a;}
     .favorite-card p{font-weight:bold;}
-    .favorite-card img, .favorite-card video, .favorite-card iframe {width:100%; max-width:250px; height:180px; border-radius:12px; object-fit:cover;}
-    .favorite-card audio {width:100%; max-width:250px;}
-  .favorites-container {
-  margin-bottom: 40px;
-  background: rgba(28, 28, 28, 0.8);
-  padding: 20px;
-  border-radius: 16px;
-}
-.favorites-container h3 {
-  margin-bottom: 20px;
-  color: #f1c40f;
-}
-
+    .favorite-card img, .favorite-card video, .favorite-card iframe {width:100%; height:auto; border-radius:12px; object-fit:cover;}
+    .favorite-card audio {width:100%;}
+    .favorites-container {
+      margin-bottom: 40px;
+      background: rgba(28, 28, 28, 0.8);
+      padding: 20px;
+      border-radius: 16px;
+    }
+    .favorites-container h3 {margin-bottom: 20px; color: #f1c40f;}
 
     /* Contact */
     .contact-container {display:flex; justify-content:center; gap:50px; flex-wrap:wrap;}
     .contact-item{text-align:center;}
-    .contact-item img{width:50px; height:50px; margin-bottom:10px; cursor:pointer; transition:transform 0.3s;}
+    .contact-item img{width:40px; height:40px; margin-bottom:10px; cursor:pointer; transition:transform 0.3s;}
     .contact-item img:hover{transform:scale(1.2);}
     .contact-item p{font-weight:bold;}
+    @media (max-width:600px) {
+      .contact-container {flex-direction:column; align-items:center;}
+    }
 
     /* Projects */
     .projects-grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:30px; max-width:1000px; margin:auto;}
-    .project-card img{width:100%; max-width:250px; height:180px; object-fit:cover; border:5px solid black; border-radius:10px; cursor:pointer; transition:transform 0.2s, box-shadow 0.2s;}
+    .project-card img{width:100%; height:180px; object-fit:cover; border:5px solid black; border-radius:10px; cursor:pointer; transition:transform 0.2s, box-shadow 0.2s;}
     .project-card img:hover{transform:scale(1.05); box-shadow:0 0 15px rgba(0,0,0,0.7);}
     .project-card p{margin-top:10px; font-weight:bold;}
 
@@ -115,12 +127,6 @@
     #map {background:#111; text-align:center;}
     .map-container {max-width:900px; margin:auto; border-radius:16px; overflow:hidden; box-shadow:0 4px 20px rgba(0,0,0,0.6);}
 
-    /* Popup */
-    .popup {display:none; position:fixed; z-index:999; padding-top:100px; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.9);}
-    .popup-content {max-width:90%; max-height:90vh; border-radius:10px;}
-    #caption {text-align:center; color:#f1f1f1; margin-top:10px;}
-    .close {position:absolute; top:20px; right:40px; color:white; font-size:40px; font-weight:bold; cursor:pointer;}
-  
     /* Footer */
     footer {padding:1rem; text-align:center; background:rgba(0,0,0,0.7);}
   </style>
@@ -132,6 +138,7 @@
       <img src="IMG_20250827_052609.jpg" width="50" height="50">
       <span>Kyle Flores</span>
     </div>
+    <button class="menu-toggle d-md-none"><i class="bi bi-list"></i></button>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -179,55 +186,31 @@
   </section>
 
   <!-- Favorites -->
-<section id="favorite">
-  <h2>Favorites</h2>
+  <section id="favorite">
+    <h2>Favorites</h2>
 
-  <!-- Music Container -->
-  <div class="favorites-container">
-    <h3>🎵 Music</h3>
-    <div class="favorites-grid">
-      <div class="favorite-card">
-        <p>Song 1</p>
-        <audio controls src="20250725-100901.mp3"></audio>
-      </div>
-      <div class="favorite-card">
-        <p>Song 2</p>
-        <audio controls src="20250725-100901.mp3"></audio>
-      </div>
-      <div class="favorite-card">
-        <p>Song 3</p>
-        <audio controls src="20250725-100901.mp3"></audio>
-      </div>
-      <div class="favorite-card">
-        <p>Song 4</p>
-        <audio controls src="20250725-100901.mp3"></audio>
+    <!-- Music Container -->
+    <div class="favorites-container">
+      <h3>🎵 Music</h3>
+      <div class="favorites-grid">
+        <div class="favorite-card"><p>Song 1</p><audio controls src="20250725-100901.mp3"></audio></div>
+        <div class="favorite-card"><p>Song 2</p><audio controls src="20250725-100901.mp3"></audio></div>
+        <div class="favorite-card"><p>Song 3</p><audio controls src="20250725-100901.mp3"></audio></div>
+        <div class="favorite-card"><p>Song 4</p><audio controls src="20250725-100901.mp3"></audio></div>
       </div>
     </div>
-  </div>
 
-  <!-- Video Container -->
-  <div class="favorites-container mt-5">
-    <h3>🎬 Videos</h3>
-    <div class="favorites-grid">
-      <div class="favorite-card">
-        <p>Video 1</p>
-        <video controls src="VID_20250907_071036.mp4"></video>
-      </div>
-      <div class="favorite-card">
-        <p>Video 2</p>
-        <video controls src="5ed327d18077b0bbaf80ba7acdbbb2e0.mp4"></video>
-      </div>
-      <div class="favorite-card">
-        <p>Video 3</p>
-        <video controls src="b56ecd095ec0c1bd4ea916430c67a721.mp4"></video>
-      </div>
-      <div class="favorite-card">
-        <p>Video 4</p>
-        <video controls src="video4.mp4"></video>
+    <!-- Video Container -->
+    <div class="favorites-container mt-5">
+      <h3>🎬 Videos</h3>
+      <div class="favorites-grid">
+        <div class="favorite-card"><p>Video 1</p><video controls src="VID_20250907_071036.mp4"></video></div>
+        <div class="favorite-card"><p>Video 2</p><video controls src="5ed327d18077b0bbaf80ba7acdbbb2e0.mp4"></video></div>
+        <div class="favorite-card"><p>Video 3</p><video controls src="b56ecd095ec0c1bd4ea916430c67a721.mp4"></video></div>
+        <div class="favorite-card"><p>Video 4</p><video controls src="video4.mp4"></video></div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Contact -->
   <section id="contact">
@@ -249,22 +232,21 @@
   </section>
 
   <!-- Projects -->
-  <!-- Projects -->
-<section id="project">
-  <h2>Projects</h2>
-  <div class="projects-grid">
-    <div class="project-card">
-      <img src="Screenshot_20250904-172414.png" alt="Project 1">
-      <p>ChatAI</p>
-      <a href="index_2.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
+  <section id="project">
+    <h2>Projects</h2>
+    <div class="projects-grid">
+      <div class="project-card">
+        <img src="Screenshot_20250904-172414.png" alt="Project 1">
+        <p>ChatAI</p>
+        <a href="index_2.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
+      </div>
+      <div class="project-card">
+        <img src="Screenshot_20250904-172630.png" alt="Project 2">
+        <p>Class Schedule</p>
+        <a href="index_1.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
+      </div>
     </div>
-    <div class="project-card">
-      <img src="Screenshot_20250904-172630.png" alt="Project 2">
-      <p>Class Schedule</p>
-      <a href="index_1.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
-    </div>
-  </div>
-</section>
+  </section>
 
   <!-- Schedule -->
   <section id="schedule">
@@ -292,13 +274,30 @@
   </footer>
 
   <script>
-    // Simple smooth scrolling
+    // Smooth scrolling
     document.querySelectorAll('nav a').forEach(anchor=>{
       anchor.addEventListener('click', function(e){
         e.preventDefault();
         document.querySelector(this.getAttribute('href')).scrollIntoView({behavior:'smooth'});
       });
     });
+
+    // Mobile Menu Toggle
+    document.querySelector('.menu-toggle').addEventListener('click', function () {
+      document.querySelector('nav ul').classList.toggle('show');
+    });
+  // ✅ Pause other videos when one plays
+const videos = document.querySelectorAll("video");
+videos.forEach(video => {
+  video.addEventListener("play", () => {
+    videos.forEach(otherVideo => {
+      if (otherVideo !== video) {
+        otherVideo.pause();
+      }
+    });
+  });
+});
+
   </script>
 </body>
 </html>
