--- a/index.html
+++ b/index.html
@@ -457,10 +457,10 @@ footer {padding:1rem; text-align:center; background:rgba(0,0,0,0.7);}
     <div class="favorites-container mt-5">
       <h3>🎬 Videos</h3>
       <div class="favorites-grid">
-        <div class="favorite-card"><p>Video 1</p><video controls src="VID_20250907_071036.mp4"></video></div>
+        <div class="favorite-card"><p>Video 1</p><video controls src="070eb4007fb3c9ac5c90636d9afcc73c.mp4"></video></div>
         <div class="favorite-card"><p>Video 2</p><video controls src="5ed327d18077b0bbaf80ba7acdbbb2e0.mp4"></video></div>
         <div class="favorite-card"><p>Video 3</p><video controls src="b56ecd095ec0c1bd4ea916430c67a721.mp4"></video></div>
-        <div class="favorite-card"><p>Video 4</p><video controls src="video4.mp4"></video></div>
+        <div class="favorite-card"><p>Video 4</p><video controls src="3d6c4c1fc447bb85df86abb037cad49d.mp4"></video></div>
       </div>
     </div>
   </section>
