--- a/index.html
+++ b/index.html
@@ -43,11 +43,27 @@ header.scrolled-header {
   background: rgba(0, 0, 0, 0.95);
   box-shadow: 0 2px 10px rgba(0,0,0,0.5);
 }
-#logo {display: flex; align-items: center; gap: 10px;}
-#logo img {border-radius: 50%;}
-nav ul {list-style: none; display: flex; gap: 20px;}
-nav ul li a {text-decoration: none; color: white; font-weight: bold; transition: 0.3s;}
-nav ul li a:hover {color: #f1c40f;}
+#logo {
+  display: flex; 
+  align-items: center; 
+  gap: 10px;
+}
+#logo img {
+  border-radius: 50%;
+}
+nav ul {
+  list-style: none; 
+  display: flex; 
+  gap: 20px;}
+nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 
+  bold; transition: 0.3s;
+}
+nav ul li a:hover {
+  color: #f1c40f;
+}
 
 /* Navbar Responsive */
 .menu-toggle {background: none; border: none; color: white; font-size: 28px;}
@@ -524,6 +540,16 @@ footer {padding:1rem; text-align:center; background:rgba(0,0,0,0.7);}
         <img src="Screenshot_20250904-172630.png" alt="Project 2">
         <p>Class Schedule</p>
         <a href="index_1.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
+      </div>
+            <div class="project-card">
+        <img src="Screenshot_20250924-065407~2.png" alt="Simple Calculator">
+        <p>Class Schedule</p>
+        <a href="index_3.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
+      </div>
+       <div class="project-card">
+        <img src="IMG_20250924_064734.png" alt="To-do list">
+        <p>Class Schedule</p>
+        <a href="index_4.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
       </div>
     </div>
   </section>
