--- a/index.html
+++ b/index.html
@@ -543,13 +543,19 @@ footer {padding:1rem; text-align:center; background:rgba(0,0,0,0.7);}
       </div>
             <div class="project-card">
         <img src="Screenshot_20250924-065407~2.png" alt="Simple Calculator">
-        <p>Class Schedule</p>
+        <p>Calculator</p>
         <a href="index_3.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
       </div>
        <div class="project-card">
         <img src="IMG_20250924_064734.png" alt="To-do list">
-        <p>Class Schedule</p>
+        <p>Todolist</p>
         <a href="index_4.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
+      </div>
+    </div>
+           <div class="project-card">
+        <img src="unnamed.png" alt="To-do list">
+        <p>Jurassic Jump</p>
+        <a href="index_5.html" class="btn btn-warning mt-2" target="_blank">Open Project</a>
       </div>
     </div>
   </section>
