--- a/index_5.html
+++ b/index_5.html
@@ -20,7 +20,6 @@
       transition: background-color 1s linear;
     }
 
-    /* ===== Professional / Competitive Styles ===== */
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
     .night-mode {
@@ -28,17 +27,15 @@
       --text-color: #fff;
     }
 
-    /* Global Transitions for Night Mode */
     #scoreDisplay {
       transition: color 1s linear;
     }
 
-    /* ===== Welcome Screen & Game Over (Restored Original Images) ===== */
+    /* ===== Welcome Screen ===== */
     #welcomeScreen {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      /* RESTORED: Your original welcome screen image */
       background: url("unnamed.png") no-repeat center/cover;
       display: flex;
       justify-content: center;
@@ -70,39 +67,35 @@
     }
     #welcomeScreen button.show { opacity: 1; }
 
-    /* ===== Game Area (Dynamic Backgrounds) ===== */
+    /* ===== Game Area ===== */
     #game {
       position: relative;
       width: 100%;
       height: 100%;
       overflow: hidden;
       display: none;
-
-      /* Initial background will be set in JavaScript now for dynamic changes */
       background-size: cover;
       background-repeat: repeat-x;
-      background-position: bottom; /* Anchor to the ground */
+      background-position: bottom;
       animation: scrollBg 8s linear infinite;
-      transition: background-image 1s ease-in-out; /* Smooth transition for background change */
+      transition: background-image 1s ease-in-out;
     }
 
     @keyframes scrollBg {
       from { background-position-x: 0; }
-      to { background-position-x: -1000px; } /* Only scroll the X-axis */
+      to { background-position-x: -1000px; }
     }
 
-    /* ===== Night Mode Overlay on Backgrounds (Optional but good contrast) ===== */
     .night-mode #game::after {
       content: "";
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
-      background-color: rgba(0, 0, 0, 0.4); /* Dark overlay */
+      background-color: rgba(0, 0, 0, 0.4);
       z-index: 1;
       pointer-events: none;
     }
 
-
-    /* ===== Pause Overlay ===== */
+    /* Pause Overlay */
     #pauseOverlay {
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
@@ -116,7 +109,7 @@
       pointer-events: none;
     }
 
-    /* ===== Dino & Obstacle (Minor adjustments) ===== */
+    /* Dino & Obstacle */
     #dino {
       position: absolute;
       bottom: 0;
@@ -149,7 +142,7 @@
       width: 100%; height: 100%; object-fit: contain;
     }
 
-    /* ===== Score & High Score ===== */
+    /* Score */
     #scoreDisplay {
       position: absolute;
       top: 2%;
@@ -166,7 +159,7 @@
       margin-top: 5px;
     }
 
-    /* ===== Game Over Screen (Competitive look) ===== */
+    /* Game Over Screen */
     #gameOver {
       position: fixed;
       top: 0; left: 0;
@@ -176,7 +169,6 @@
       align-items: center;
       flex-direction: column;
       z-index: 20;
-      /* RESTORED: Your original game over image, now with an overlay */
       background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("gameover.png") no-repeat center/cover;
     }
 
@@ -235,7 +227,7 @@
     <div id="pauseOverlay">PAUSED</div>
 
     <div id="dino">
-      <img id="dinoImg" src="https://i.ibb.co/zR4dKQS/dino-run.gif" alt="Dino Running">
+      <img id="dinoImg" src="IMG_20250930_140622_456.jpg" alt="Dino Running">
     </div>
     <div id="obstacle">
       <img id="obstacleImg" src="Gemini_Generated_Image_k72fc8k72fc8k72f~2.png" alt="Obstacle">
@@ -253,7 +245,7 @@
   </div>
 
   <script>
-    // Constants for elements
+    // Elements
     const dino = document.getElementById("dino");
     const dinoImg = document.getElementById("dinoImg");
     const obstacle = document.getElementById("obstacle");
@@ -270,22 +262,23 @@
     const obstaclesCleared = document.getElementById("obstaclesCleared");
     const bestScoreEl = document.getElementById("bestScore");
     const pauseOverlay = document.getElementById("pauseOverlay");
+    const startBtn = document.getElementById("startBtn"); // ✅ FIXED
 
-    // Audio elements
+    // Audio
     const jumpSound = document.getElementById("jumpSound");
     const gameOverSound = document.getElementById("gameOverSound");
 
     // Dino image URLs
-    const DINO_RUN_IMG = "https://i.ibb.co/zR4dKQS/dino-run.gif";
-    const DINO_JUMP_IMG = "https://i.ibb.co/VMy4P3s/dino-jump.png";
-    const DINO_DUCK_IMG = "https://i.ibb.co/1J911h2/dino-duck.gif";
+    const DINO_RUN_IMG = "IMG_20250930_140622_456.jpg";
+    const DINO_JUMP_IMG = "IMG_20250930_140622_456.jpg";
+    const DINO_DUCK_IMG = "IMG_20250930_140622_456.jpg";
 
-    // ✅ Background Image URLs (Restored & Named)
+    // Backgrounds
     const BG_LEVEL_1 = "url('Gemini_Generated_Image_ej0qo4ej0qo4ej0q~2.png')";
     const BG_LEVEL_2 = "url('Gemini_Generated_Image_5e6erl5e6erl5e6e (1)~2.png')";
     const BG_LEVEL_3 = "url('Gemini_Generated_Image_8iip5v8iip5v8iip~2.png')";
 
-    // Game state variables
+    // Game state
     let dinoY = 0, velocity = 0;
     let gravity = -0.7, jumpPower = 16;
     let isAlive = false;
@@ -300,10 +293,9 @@
     let highScore = localStorage.getItem('dinoHighScore') || 0;
     let isLowObstacle = false;
 
-    // Utility: Format score with leading zeros
     const formatScore = (s) => String(Math.floor(s)).padStart(5, '0');
 
-    // ===== Welcome animations =====
+    // Welcome animations
     window.onload = () => {
       highScoreText.textContent = "HI: " + formatScore(highScore);
       setTimeout(() => welcomeText.classList.add("show"), 500);
@@ -314,7 +306,6 @@
       welcomeScreen.style.display = "none";
       game.style.display = "block";
       resetGame();
-      // Set up key listeners once
       document.addEventListener("keydown", handleKeyInput);
       document.addEventListener("keyup", handleKeyInput);
       document.addEventListener("touchstart", jump);
@@ -328,11 +319,10 @@
       isPaused = false;
       speed = baseSpeed;
       score = 0; obstacleCount = 0;
-      gravity = -0.7; // Reset gravity
+      gravity = -0.7;
 
-      // Reset visuals and background
       document.body.classList.remove("night-mode");
-      game.style.backgroundImage = BG_LEVEL_1; // Start with your first level BG
+      game.style.backgroundImage = BG_LEVEL_1;
       dinoImg.src = DINO_RUN_IMG;
       dino.classList.remove("duck");
       setNewObstacle();
@@ -345,14 +335,10 @@
     }
 
     function togglePause() {
-        if (!isAlive) return;
-
-        isPaused = !isPaused;
-        pauseOverlay.style.display = isPaused ? "flex" : "none";
-
-        if (!isPaused) {
-            requestAnimationFrame(updateGame);
-        }
+      if (!isAlive) return;
+      isPaused = !isPaused;
+      pauseOverlay.style.display = isPaused ? "flex" : "none";
+      if (!isPaused) requestAnimationFrame(updateGame);
     }
 
     function handleKeyInput(e) {
@@ -400,71 +386,48 @@
 
     function setNewObstacle() {
       obstacleX = window.innerWidth;
-      // Chance of low obstacle increases from 30% up to 60% as score passes 500
       isLowObstacle = Math.random() < (0.3 + Math.min(score / 500, 0.3));
-
       obstacle.classList.toggle('low-obstacle', isLowObstacle);
-
-      if (isLowObstacle) {
-        obstacleImg.src = "https://i.ibb.co/N730cRz/ptera-fly.gif";
-      } else {
-        // Randomly choose between a couple of your obstacle image variations for variety
-        obstacleImg.src = Math.random() < 0.5
-            ? "Gemini_Generated_Image_k72fc8k72fc8k72f~2.png" // Cactus
-            : "https://i.ibb.co/6F5T6nL/cactus2.png"; // Alternate cactus/obstacle
-        let baseSize = 40 + Math.random() * 30;
-        obstacle.style.width = `clamp(${baseSize}px, ${baseSize/10}vw, ${baseSize * 2}px)`;
-      }
+      obstacleImg.src = "IMG_20251002_072455.png";
     }
 
-
+    // ✅ Fixed delta-time based update loop
+    let lastTime = null;
     function updateGame(timestamp) {
       if (!isAlive || isPaused) return;
+      if (!lastTime) lastTime = timestamp;
+      let delta = (timestamp - lastTime) / 16.67;
+      lastTime = timestamp;
 
-      // Dino physics
-      velocity += gravity;
-      dinoY += velocity;
+      velocity += gravity * delta;
+      dinoY += velocity * delta;
       if (dinoY < 0) {
         dinoY = 0; velocity = 0;
         if (!isDucking) dinoImg.src = DINO_RUN_IMG;
       }
       dino.style.bottom = dinoY + "px";
 
-      // Move obstacle
-      obstacleX -= speed;
+      obstacleX -= speed * delta;
       if (obstacleX < -obstacle.offsetWidth) {
         score++; obstacleCount++;
-        speed += 0.05; // Continuous speed increase
-
-        // ENHANCEMENT: Score-based aesthetics and difficulty
-        if (score % 100 === 0 && score > 0) { // Toggle night mode every 100 points
-            document.body.classList.toggle("night-mode");
-        }
-        if (score === 25) { // Change to your second specified BG at score 25
-            game.style.backgroundImage = BG_LEVEL_2;
-        } else if (score === 50) { // Change to your third specified BG at score 50
-            game.style.backgroundImage = BG_LEVEL_3;
-        } else if (score > 50 && score % 200 === 0) {
-            gravity -= 0.02; // Jumps get harder at higher scores
-        }
-
+        speed += 0.05;
+        if (score % 100 === 0 && score > 0) document.body.classList.toggle("night-mode");
+        if (score === 25) game.style.backgroundImage = BG_LEVEL_2;
+        else if (score === 50) game.style.backgroundImage = BG_LEVEL_3;
+        else if (score > 50 && score % 200 === 0) gravity -= 0.02;
         scoreEl.textContent = formatScore(score);
         setNewObstacle();
       }
       obstacle.style.left = obstacleX + "px";
 
-      // Collision check (Bounding Box)
       let dinoRect = dino.getBoundingClientRect();
       let obstacleRect = obstacle.getBoundingClientRect();
-
       let x_overlap = dinoRect.right > obstacleRect.left && dinoRect.left < obstacleRect.right;
       let y_overlap = dinoRect.bottom > obstacleRect.top;
-
       if (x_overlap && y_overlap) {
         gameOver();
         return;
       }
-
       gameLoop = requestAnimationFrame(updateGame);
     }
 
@@ -473,15 +436,12 @@
       cancelAnimationFrame(gameLoop);
       gameOverSound.currentTime = 0;
       gameOverSound.play().catch(() => {});
-
       let isNewBest = false;
       if (score > highScore) {
         highScore = score;
         localStorage.setItem('dinoHighScore', highScore);
         isNewBest = true;
       }
-
-      // Display Game Over Screen
       gameOverScreen.style.display = "flex";
       finalScore.textContent = "FINAL SCORE: " + formatScore(score);
       obstaclesCleared.textContent = "OBSTACLES: " + obstacleCount;
